fix overflow

--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@
 *{
     padding: 0;
     margin: 0;
+    /* overflow-x: auto; */
+}
+
+html, body{
     overflow-x: hidden;
 }
 
@@ -33,12 +37,12 @@ p,li, span, label, input, textarea{
 }
 
 .main{
-    background: url(img/black.jpg);
+    background: url(img/black.jpg); 
     background-size: cover;
     background-attachment: fixed;
     background-position: top center;
     height: 100vh;
-    padding: 50px;
+    padding: 50px; 
     position: relative;
     z-index: 1;
 }
